--- a/src/app/visuals/shared/node-visual/node-visual.component.css
+++ b/src/app/visuals/shared/node-visual/node-visual.component.css
@@ -4,15 +4,15 @@
         fill 0.1s ease-out,
         stroke 0.1s ease-out;
 
-    stroke: white;
-    stroke-width: 0.25;
+    stroke: rgb(204, 197, 197);
+    stroke-width: 1.5;
 }
 
 .node-name {
   font-family: 'Lato';
   text-anchor: middle;
   alignment-baseline: central;
-  font-weight: 300;
+  font-weight: 500;
   fill: white;
   pointer-events: none;
 }
