--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,59 +1,8 @@
-
-<style>
-  :host {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 14px;
-    color: #333;
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    margin: 8px 0;
-  }
-
-  p {
-    margin: 0;
-  }
-
-  .toolbar {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 60px;
-    display: flex;
-    align-items: center;
-    background-color: #1976d2;
-    color: white;
-    font-weight: 600;
-    padding: 0 24px;
-  }
-
-  .content {
-    display: flex;
-    margin: 82px auto 32px;
-    padding: 0 16px;
-    max-width: 960px;
-    flex-direction: column;
-    align-items: center;
-  }
-</style>
-
-
-<div class="toolbar" role="banner">
-  <span>Angular Data Visualization</span>
-    <div class="spacer"></div>
+<div class="app">
+    <div class="header">Angular Data Visualization</div>
+    <div class="body">
+        <div class="left-panel"></div>
+        <div class="center-panel"><svg></svg></div>
+        <div class="right-panel"></div>
+    </div>
 </div>
-
-<div class="content" role="main">
-  <router-outlet></router-outlet>
-</div>
-
-
