--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,84 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+    height:99%;
+    width:99%;
+}
+
+.links {
+    stroke-width: 1;
+    color: #aaa;
+}
+
+.nodes {
+    stroke-width: 1;    
+    cursor: pointer;
+}
+
+text {
+    font-size: 9pt;   
+    fill: #eee;
+    text-anchor: middle;
+ }
+
+ svg {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    background: #FFFFFA;
+    border: 1px solid gray;
+    border-radius: 7px;
+}
+
+.app {
+    display: flex;
+    flex-direction: column;
+    height:600px;
+    width:100%;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;
+    flex-shrink: 0;
+}
+
+.header {
+  
+    width:100%;
+    background-color:#1976d2;
+    color: #eee;
+    font-family: arial;
+    font-size:13pt;
+    font-weight:600;
+    letter-spacing: 1px;
+    padding:25px;
+}
+
+.body {
+    flex-direction: row;
+    justify-content: space-between;
+    flex: 1;
+    display: inline-flex;
+    width:100%;
+    height:90%;
+    margin:20px;
+}
+
+.left-panel {
+    width:100px;
+}
+
+.right-panel {
+    width:100px;
+}
+
+.center-panel {
+    flex: 1;
+    width:100%;
+}
+
+svg {
+    flex:1;
+    width:99%;
+    height:99%;
+}
