initial code for multi-level transitions

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,11 @@
     <div class="header">Angular Data Visualization</div>
     <div class="body">
         <div class="left-panel"></div>
-        <div class="center-panel"><svg></svg></div>
+        <div class="center-panel">
+            <svg>
+                <g id="nodeBase"></g>
+                <g id="linkBase"></g>
+            </svg></div>
         <div class="right-panel"></div>
     </div>
 </div>
