--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,7 @@ text {
     font-size: 9pt;   
     fill: #eee;
     text-anchor: middle;
+    pointer-events: none;
  }
 
  svg {
@@ -56,7 +57,6 @@ text {
 
 .body {
     flex-direction: row;
-    justify-content: space-between;
     flex: 1;
     display: inline-flex;
     width:100%;
