multi-level node handling (left clikc - right click), links between nodes, tooltips new version

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,11 @@
     <div class="body">
         <div class="left-panel"></div>
         <div class="center-panel">
-            <svg>
-                <g id="nodeBase"></g>
+            <svg>                
                 <g id="linkBase"></g>
+                <g id="nodeBase"></g>
             </svg></div>
         <div class="right-panel"></div>
     </div>
+    <div id="graph-tooltip"></div>
 </div>
