--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,13 +6,14 @@ body {
 }
 
 .links {
-    stroke-width: 1;
-    color: #aaa;
+    stroke-width: 1.5;
+    stroke: #aaa;
 }
 
 .nodes {
     stroke-width: 1;    
     cursor: pointer;
+    pointer-events: all;
 }
 
 text {
@@ -30,6 +31,7 @@ text {
     background: #FFFFFA;
     border: 1px solid gray;
     border-radius: 7px;
+    pointer-events: none;
 }
 
 .app {
@@ -82,3 +84,17 @@ svg {
     width:99%;
     height:99%;
 }
+
+#graph-tooltip {
+    position: absolute;
+    width: auto;
+    height: auto;
+    padding: 5px;
+    font: 12px sans-serif;
+    background: white;
+    border: 1px solid gray;
+    border-radius: 7px;
+    pointer-events: none;
+    z-index: 100;
+    opacity: 0;
+ }
